--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="style.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 <body>
   <div class="container">
@@ -23,18 +26,20 @@
           <div id="hour"></div>
         </div>
       </header>
-      <div class="btn-group" role="group">
-        <button type="button" class=" btn btn-outline-primary active" data-filter="all">Toutes</button>
-        <button type="button" class=" btn btn-outline-primary" data-filter="todo">A faire</button>
-        <button type="button" class=" btn btn-outline-primary" data-filter="done">Faites</button>
-      </div>
-      <div class="content">
-        <ul id="list"></ul>
-      </div>
-      <div class="add-item">
-          <i class="fa-solid fa-circle-plus"></i>
-          <input type="text" id="input" placeholder="Ajoutez une tâche...">
+      <div class="content-wrapper">
+        <div class="btn-group" role="group">
+          <button type="button" class=" btn btn-outline-primary active" data-filter="all">Toutes</button>
+          <button type="button" class=" btn btn-outline-primary" data-filter="todo">À faire</button>
+          <button type="button" class=" btn btn-outline-primary" data-filter="done">Fait</button>
         </div>
+        <div class="content">
+          <ul id="list"></ul>
+        </div>
+        <div class="add-item">
+            <i class="fa-solid fa-circle-plus"></i>
+            <input type="text" id="input" placeholder="Ajoutez une tâche...">
+          </div>
+      </div>
     </div>
   </div>
   <script src="script.js"></script>
