--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </header>
       <div class="content-wrapper">
         <div class="btn-group" role="group">
-          <button type="button" class=" btn btn-outline-primary active" data-filter="all">Toutes</button>
-          <button type="button" class=" btn btn-outline-primary" data-filter="todo">À faire</button>
-          <button type="button" class=" btn btn-outline-primary" data-filter="done">Fait</button>
+          <button type="button" class=" btn btn-outline-secondary active" data-filter="all">Toutes <small class="all"></small></button>
+          <button type="button" class=" btn btn-outline-secondary" data-filter="todo">À faire</button>
+          <button type="button" class=" btn btn-outline-secondary" data-filter="done">Fait</button>
         </div>
         <div class="content">
           <ul id="list"></ul>
